dolphinview: prevent unselecting first element when renaming with key_up

This will endup in the renaming being ignored.

CCBUG: 517392
BUG: 514401